HmSplitTextFileBySizeの方も、「元ファイルがutf8」だった際に、BOMアリなしを考慮するようにした。

--- a/src/SplitTextFileBySize/SplitTextFileBySize.csproj
+++ b/src/SplitTextFileBySize/SplitTextFileBySize.csproj
@@ -8,6 +8,9 @@
     <PublishAot>true</PublishAot>
     <InvariantGlobalization>true</InvariantGlobalization>
     <Copyright>2024 © Akitsugu Komiyama</Copyright>
+    <AssemblyVersion>1.0.1</AssemblyVersion>
+    <FileVersion>1.0.1</FileVersion>
+    <Version>1.0.1</Version>
   </PropertyGroup>
 
 </Project>
